Add default function

--- a/dicee.html
+++ b/dicee.html
@@ -30,6 +30,10 @@
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/32ac382ed0.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
